--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&display=swap');
 @font-face {
     font-family: 'VALORANT';
     src: url('VALORANT-Regular.woff2') format('woff2'),
@@ -10,42 +11,91 @@ body{
     margin: 0px;
     background-color: rgb(236, 222, 224);
 }
-.a1{
-    position: fixed; 
+header{
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    height: 80px;
+    width: 100%;
+    color: white;
     z-index: 100;
-    background-color : black;
-    padding-top: 15px;
-    text-align: center; 
-    font-size : 12px;
-    height:  40px;
-    width: 100%
-
 }
 
-.a1 a {
+.left_header{
+    display: flex;
+    justify-content: space-between;
+}
 
-    color : white;  
-    padding: 20px 5px 20px 5px;
+.left_header div{
+    margin:25px;
     margin-right: 10px;
-    text-decoration: none;
 }
 
-.a1 a:hover {
-    color:orange;
-
+.left_header div img:hover{
+   cursor: pointer;
+   background-color:red;
 }
 
 
 
-.a1 .playbutton{
-    color : black;  
-    margin-left: 80px;
-    padding: 10px 10px 10px 10px;
+.middle_header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.middle_header a{
+    position: relative;
     text-decoration: none;
-    background-color : red;
+    color: white;   
+
+ }
+
+
+
+.middle_header a:hover .dropdown{
+    display: block; 
+}
+
+.title{
+    font-family: 'Edu VIC WA NT Beginner';
+    margin: 25px;
+    padding: 7px 15px 7px 15px; 
+    margin-left: 0;
+    margin-right: 30px;
+}
+
+.middle_header .title:hover{
+    background-color:rgb(50, 50, 50);
+    cursor: pointer;
     border-radius: 10px;
 }
 
+.middle_header a .dropdown{
+    display: none;
+    width: 170px;
+    background-color: rgb(28, 27, 27);
+    position: absolute;
+    top: 100%;
+    padding: 20px;
+    border-top: 5px solid rgb(251, 88, 88);
+}
+.middle_header a .dropdown div{
+    color: rgb(171, 170, 170);
+    padding: 10px;
+}
+
+.middle_header a .dropdown div:hover{
+    color: white;
+    background-color: rgba(244, 242, 242, 0.345);  
+}
+
+
+
+.right_header{
+    display: flex;
+    justify-content: space-between;
+}
 #myVideo{
     position: absolute;
     z-index: -1;
@@ -115,7 +165,6 @@ body{
     width:  200px;
     height: 45px;
     transition: width 1s, height 1s;
-    opacity:0.1;
 }
 
 .a7:hover .blackPlayFree{
